# machine-learning

./: .gitignore  .pre-commit-config.yaml  .rooignore  1_clean_data.py  2_master_feature_engineering.py  2b_feature_engineering .py  3_model_training.py  3_model_training_2025.py  4_backtest_triple_barrier.py  5_analyze_losses.py  CLAUDE.md  INVENTORY.md  JOURNAL.md  Makefile  README.md  _audit_corr.py  _audit_d1_leak.py  _diag_direction.py  backtest_utils.py  clean_data.py  config.py  feature_engineering.py  financial_backtest.py  ml_evolution.md  model-training.py  optimize_sizing.py  prompt.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run_deterministic_grid.py  run_meta_labeling_cpcv.py  run_pipeline_us30.py  run_pipeline_v1.py  run_pipeline_walk_forward.py  run_pipeline_xauusd.py  run_step_01_integration.py  run_v3_phase1.py  run_walk_forward_us30.py
.claude/: settings.local.json
.roo/: rules.md
archive_v1/: _debug_ff.py  compare_cost_aware.py  inspect_btc_csv.py  run_pipeline_btcusd.py  run_validation_cpcv.py
cleaned-data/: EURUSD_D1_cleaned.csv  EURUSD_H4_cleaned.csv  GBPUSD_D1_cleaned.csv  GBPUSD_H4_cleaned.csv  Predictions_2026_Baseline_H1.csv  USDCHF_D1_cleaned.csv  USDCHF_H4_cleaned.csv  XAUUSD_D1_cleaned.csv  XAUUSD_H4_cleaned.csv
data/: EURUSD_D1.csv  EURUSD_H4.csv  GBPUSD_D1.csv  GBPUSD_H4.csv  USDCHF_D1.csv  USDCHF_H4.csv  XAUUSD_D1.csv  XAUUSD_H4.csv
data-future/: EURUSD_D1.csv  EURUSD_H1.csv  EURUSD_H4.csv
docs/: CODE_REVIEW_AUDIT.md  README.md  REFACTORING_PLAN.md  cost_audit_v2.md  feature_ranking_v4.md  h_new1_meta_us30.md  h_new2_walk_forward_rolling.md  h_new3_eurusd_h4.md  h_new4_portfolio.md  hyperparam_tuning_v4.md  model_selection_v4.md  pipeline_v4_locked.md  pivot_plan_v3.md  prompt1.txt  prompt2.txt  prompt3.txt  prompt4.txt  simulator_audit_a1.md  step_01_implementation_spec.md  step_01_target_redefinition.md  step_02_final_report.md  step_02_implementation_spec.md  step_03_gbm_primary_classifier.md  step_05_economic_calendar_integration.md  step_05_implementation_spec.md  step_06_meta_labeling_calibration.md  step_07_cross_asset_validation.md  step_07_implementation_spec.md  step_08_postmortem_and_v2_roadmap.md  v2_hypothesis_01.md  v2_hypothesis_02.md  v2_hypothesis_03.md  v2_hypothesis_04.md  v2_hypothesis_05.md  v3_hypothesis_06.md  v3_hypothesis_06_replay.md  v3_hypothesis_07.md  v3_hypothesis_07_replay.md  v3_roadmap.md
learning_machine_learning/: __init__.py
predictions/: Analyse_et_Pistes_Amelioration.md  Rapport_Performance_2022.md  Rapport_Performance_2023.md  Rapport_Performance_2024.md  cpcv_results.csv  (+17 more)
(+293 files in other folders)
