[project]
name = "trading-bot-ml"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["data", "ready-data", "cleaned-data", "models/snapshots"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "UP", "N", "SIM"]
ignore = ["E501"]  # géré par black

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = false  # progressive
ignore_missing_imports = true
exclude = ["data/", "ready-data/", "cleaned-data/", "models/snapshots/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: tests unitaires rapides (<100ms)",
    "integration: tests d'intégration (I/O)",
    "acceptance: tests bout-en-bout (lents)",
]
addopts = "-ra --strict-markers"
