[project]
name = "trading-bot-ml"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["data", "ready-data", "cleaned-data", "models/snapshots"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "UP", "N", "SIM"]
ignore = ["E501"]  # géré par black

[tool.ruff.lint.per-file-ignores]
# ML code convention: X (feature matrix), y (target) are uppercase
"app/features/ranking.py" = ["N803", "N806"]
"app/models/candidates.py" = ["N806"]
"app/models/cpcv_evaluation.py" = ["N803", "N806"]
"app/models/nested_tuning.py" = ["N803", "N806"]
"scripts/run_a6_feature_ranking.py" = ["N803", "N806", "E402"]
"scripts/run_a7_model_selection.py" = ["N803", "N806", "E402"]
"scripts/run_a8_hyperparam_tuning.py" = ["N803", "N806", "E402"]
"scripts/run_pivot_a4_replay.py" = ["N806", "E402"]
"tests/unit/test_feature_ranking.py" = ["N803", "N806"]
"tests/unit/test_model_selection.py" = ["N806"]
"tests/unit/test_nested_tuning.py" = ["N803", "N806"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = false  # progressive
ignore_missing_imports = true
exclude = ["data/", "ready-data/", "cleaned-data/", "models/snapshots/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: tests unitaires rapides (<100ms)",
    "integration: tests d'intégration (I/O)",
    "acceptance: tests bout-en-bout (lents)",
]
addopts = "-ra --strict-markers"
